// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCardPrompt should render successfully when closed 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col transition-height ease-in-out duration-100"
    style="height: 0px; overflow: hidden;"
  >
    <div
      class="flex hover:bg-trello-gray-500 rounded-ibsm items-center cursor-pointer text-trello-gray-600 p-1 mt-1"
      data-testid="add-card-prompt-container"
    >
      <svg
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="5"
          y2="19"
        />
        <line
          x1="5"
          x2="19"
          y1="12"
          y2="12"
        />
      </svg>
      <h2
        class="flex-1 ml-1.5"
      >
        Add a card
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddCardPrompt should render successfully when open 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col transition-height ease-in-out duration-100"
  >
    <div
      class="flex hover:bg-trello-gray-500 rounded-ibsm items-center cursor-pointer text-trello-gray-600 p-1 mt-1"
      data-testid="add-card-prompt-container"
    >
      <svg
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="12"
          x2="12"
          y1="5"
          y2="19"
        />
        <line
          x1="5"
          x2="19"
          y1="12"
          y2="12"
        />
      </svg>
      <h2
        class="flex-1 ml-1.5"
      >
        Add a card
      </h2>
    </div>
  </div>
</DocumentFragment>
`;
